--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Python script requires "fastjsonschema", to install just type "pip install fastjsonschema".
 To evaluate json against prepared schema type
 python scheme_validation.py <schema> <your json>, e.g.
-python scheme_validation.py main_schema.json full_input_1.json
+python scheme_validation.py main_input_schema.json full_input_1.json
+lub 
+python scheme_validation.py main_output_schema.json full_output_1.json
